--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,222 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.nav-profile {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+
+  cursor: pointer;
+  background-color: #fdfdfd73;
+
+}
+
+.avatar-profile {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.w-full {
+  margin-right: 380px;
+}
+
+.edit-profile {
+  margin-top: 75px;
+}
+
+.btn-shop-home {
+  background-color: transparent;
+  border: 2px solid #ffdf40;
+  color: #101115;
+  padding: 10px 30px;
+  font-weight: bold;
+}
+
+.btn-shop-home:hover {
+  background-color: #ffdf40;
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px rgba(255, 223, 64, 0.5);
+}
+
+.page-item {
+  width: 46px;
+  height: 46px;
   text-align: center;
+  border-radius: 50%;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .06);
+  background: #fff;
+  color: #101115;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 7px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.github {
+  height: 36px;
+  width: 36px;
+  line-height: 36px;
+  transition: all .3s ease;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background: #0F9D58;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.label-profile {
+  margin-right: 89%;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 15px;
 }
 
-.card {
-  padding: 2em;
+.product-action-link-wrap {
+  flex-direction: column;
+  margin-left: 80%;
 }
 
-.read-the-docs {
-  color: #888;
+
+.category-blog {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 10px rgba(136, 136, 136, 0.3);
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px 0 15px 15px;
+  margin-bottom: 25px;
+}
+
+.title-category-blog {
+  padding: 25px 0 5px 25px;
+}
+
+.post-category-blog li {
+  margin-top: 15px;
+  border-bottom: 1px solid #ecf0f3;
+}
+
+.post-category-blog li .post-thumb {
+  width: 80px;
+  height: 70px;
+}
+
+.post-category-blog .post-thumb a {
+  display: inline-flex;
+  height: 100%
+}
+
+.post-category-blog .post-thumb a img {
+  width: 100%;
+}
+
+.post-category-blog .post-content {
+  width: calc(100% - 110px);
+}
+
+.post-category-blog .post-content a h6 {
+  line-height: 1.2;
+  font-weight: 500;
+  margin-bottom: 5px;
+  transition: all 0.3s ease;
+  font-size: 16px;
+}
+
+.post-category-blog .post-content a h6:hover {
+  color: #f16126;
+}
+
+.post-category-blog .post-content p {
+  font-size: 14px;
+}
+
+
+
+.tags-category {
+  padding: 10px 0 15px 15px;
+  box-shadow: 0 0 10px rgba(136, 136, 136, 0.3);
+  border-radius: 10px;
+  margin-bottom: 25px;
+}
+
+.tags-category .title {
+  padding: 25px 0 5px 25px;
+}
+
+.tags-category ul {
+  padding: 20px 20px 20px 10px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+
+.tags-category ul li {
+  list-style-type: none;
+  border: none;
+
+}
+
+.tags-category li a {
+  padding: 5px 10px;
+  color: #555555;
+  border: 1px solid #ecf0f3;
+  transition: all 0.3s ease;
+  margin: 5px;
+  font-size: 14px;
+}
+
+
+.search-shop {
+  background-color: white;
+  padding: 0 25px 5px 25px;
+  box-shadow: 0 0 10px rgba(136, 136, 136, 0.1);
+  margin-bottom: 25px;
+  border-radius: 10px;
+}
+
+.search-shop form {
+  position: relative;
+}
+
+.search-shop form input {
+  margin-top: 14px;
+  background-color: #ecf0f3;
+  height: 50px;
+  padding-left: 10px;
+  line-height: 50px;
+  margin-bottom: 0;
+  border: none;
+  width: 100%;
+  outline: none;
+}
+
+.search-shop form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 14px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  line-height: 50px;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: #ecf0f3;
+
+}
+
+.img-card {
+  width: 249px;
+  height: 249px;
+}
+
+.img-card-2 {
+  width: 306px;
+  height: 306px;
 }
