--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -45,92 +45,48 @@
   top: 70px;
 }
 
-.upload {
-  margin: 42px 0 0 20px;
+.btn-upload {
+  position: relative;
+  .btn-text {
+    width: 100px;
+    position: absolute;
+    top: 140%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 
-  .ant-upload-list {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 10px;
-    margin-left: -10px;
-    margin-right: -10px;
-
-    .ant-upload-list-picture-card-container {
-      flex: 1 0 25%;
-      max-width: 21%;
-      min-width: 80px;
-      margin: 0;
-      margin-left: 10px;
-      height: 80px;
-
-      .ant-upload-list-item {
-        padding: 0;
-        border: none;
-
-        .ant-upload-list-item-image {
-          object-fit: cover;
-        }
-      }
-
-      .img-item {
-        .ant-image {
-          width: 100%;
-          height: 80px;
-
-          .img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-        }
-
-        &:hover {
-          .remove-icon {
-            visibility: visible;
-          }
-        }
-
-        position: relative;
-
-        .remove-icon {
-          cursor: pointer;
-          width: 14px;
-          height: 14px;
-          position: absolute;
-          top: -5px;
-          right: -2px;
-          z-index: 1;
-          background: #fff;
-          border-radius: 50%;
-          visibility: hidden;
-        }
-      }
-    }
-
-    .ant-upload-select {
-      @extend .ant-upload-list-picture-card-container;
-      background-color: #fff;
+.img-item {
+  .ant-image {
+    width: 100%;
+    height: 80px;
+    .img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
-
-  .btn-upload {
-    position: relative;
-
-    .btn-text {
-      width: 100px;
-      position: absolute;
-      top: 140%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .text-note {
-      width: 250px;
-      font-size: 14px;
-      position: absolute;
-      top: 240%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+  &:hover {
+    .remove-icon {
+      visibility: visible;
     }
   }
+  position: relative;
+  .remove-icon {
+    cursor: pointer;
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: -5px;
+    right: -2px;
+    z-index: 1;
+    background: #fff;
+    border-radius: 50%;
+    visibility: hidden;
+  }
+}
+
+.custom-table .ant-table-cell {
+  font-size: 16px;
+  font-family: Arial;
 }
