--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -28,6 +28,10 @@
     min-width: 200px;
   }
 
+  .site-layout-content {
+    width: 76%;
+  }
+
   .site-layout {
     width: calc(100% - 250px);
   }
@@ -47,6 +51,7 @@
 
 .btn-upload {
   position: relative;
+
   .btn-text {
     width: 100px;
     position: absolute;
@@ -60,18 +65,22 @@
   .ant-image {
     width: 100%;
     height: 80px;
+
     .img {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
   }
+
   &:hover {
     .remove-icon {
       visibility: visible;
     }
   }
+
   position: relative;
+
   .remove-icon {
     cursor: pointer;
     width: 14px;
