--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -99,3 +99,7 @@
   font-size: 16px;
   font-family: Arial;
 }
+
+.ant-modal-root .ant-modal-mask {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
