--- a/src/App.css
+++ b/src/App.css
@@ -220,3 +220,12 @@
   width: 306px;
   height: 306px;
 }
+
+.gg-loading {
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: calc(50vh);
+  transform: translateY(-50%);
+}
