--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -103,3 +103,16 @@
 .ant-modal-root .ant-modal-mask {
   background-color: rgba(0, 0, 0, 0.5) !important;
 }
+
+.admin-page-product {
+  div {
+    font-size: 15px;
+    font-family: Arial;
+  }
+  .ant-table-tbody {
+    .ant-table-cell {
+      font-size: 15px;
+      font-family: Arial;
+    }
+  }
+}
